tests/valid_programs/typeof.duck
fn main() {
    let x: String = "Hallo, Welt";
    let y: typeof x = "Yoo";

    std::io::println("conversion did work");
}
