tests/invalid_programs/types/bind_int_to_string.duck
fun x() {
    let x: String = 5;
}
